[workspace]
members = [
  "xtask",
  "crates/devicetree",
  "crates/sbi",
  "crates/kernel",
  "crates/riscv",
  "crates/log",
]

[profile.release]
debug = true
lto = "fat"
overflow-checks = true
debug-assertions = true

[profile.dev]
# Somehow this is required to not fail linking
opt-level = 2
lto = "fat"
