[package]
name = "kernel"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"

[dependencies]
devicetree = { path = "../devicetree" }
allocator = { path = "../allocator" }
riscv = { path = "../riscv" }
log = { path = "../log" }
sbi = { path = "../sbi" }
displaydoc-lite = "0.1"
owo-colors = "1.3"
