cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2018"
forced-target = "riscv64gc-unknown-none-elf"

[dependencies]
devicetree = { path = "../devicetree" }
riscv = { path = "../riscv" }
log = { path = "../log" }
sbi = { path = "../sbi" }
owo-colors = "1.3"
voladdress = "0.4"
replace_with = { version = "0.1.7", default-features = false }
bitflags = "1"
